Last version, con casi todas las modificaciones

--- a/Preamble/preamble.tex
+++ b/Preamble/preamble.tex
@@ -112,15 +112,20 @@
 %\usepackage{cleveref} %Referencing without need to explicitly state fig /table
 
 % Add `custombib' in the document class option to use this section
-\ifuseCustomBib
-   \RequirePackage[square, sort, numbers, authoryear]{natbib} % CustomBib
+% \ifuseCustomBib
+%   \RequirePackage[sort, authoryear]{natbib} % CustomBib
 
 % If you would like to use biblatex for your reference management, as opposed to the default `natbibpackage` pass the option `custombib` in the document class. Comment out the previous line to make sure you don't load the natbib package. Uncomment the following lines and specify the location of references.bib file
 
 %\RequirePackage[backend=biber, style=numeric-comp, citestyle=numeric, sorting=nty, natbib=true]{biblatex}
 %\addbibresource{References/references} %Location of references.bib only for biblatex, Do not omit the .bib extension from the filename.
 
-\fi
+% \fi
+
+\usepackage{natbib}
+\bibliographystyle{unsrtnat}
+
+
 
 % changes the default name `Bibliography` -> `References'
 \renewcommand{\bibname}{References}
@@ -212,5 +217,6 @@
 {\rotatebox{90}{\makebox[\tempdima][c]{\textbf{#1}}}}
 \DeclareMathOperator*{\argmax}{argmax}
 \DeclareMathOperator*{\argmin}{argmin}
-
+\renewcommand{\algorithmicrequire}{\textbf{Input:}}
+\renewcommand{\algorithmicensure}{\textbf{Output:}}
 \usepackage[font=small,labelfont=bf]{caption}
