--- a/References/references.bib
+++ b/References/references.bib
@@ -31,12 +31,41 @@
 @misc{nair2019causal,     title={Causal Induction from Visual Observations for Goal Directed Tasks},     author={Suraj Nair and Yuke Zhu and Silvio Savarese and Li Fei-Fei},     year={2019},     eprint={1910.01751},     archivePrefix={arXiv},     primaryClass={cs.LG} } 
 @misc{beyret2019animalai,     title={The Animal-AI Environment: Training and Testing Animal-Like Artificial Cognition},     author={Benjamin Beyret and José Hernández-Orallo and Lucy Cheke and Marta Halina and Murray Shanahan and Matthew Crosby},     year={2019},     eprint={1909.07483},     archivePrefix={arXiv},     primaryClass={cs.LG} } 
 @misc{madumal2019explainable,     title={Explainable Reinforcement Learning Through a Causal Lens},     author={Prashan Madumal and Tim Miller and Liz Sonenberg and Frank Vetere},     year={2019},     eprint={1905.10958},     archivePrefix={arXiv},     primaryClass={cs.LG} } 
-@misc{CausalRL2019EliasB,   title = {Causal Reinforcement Learning},   author={Bareinboim, Elias},   howpublished = {\url{https://crl.causalai.net/}},   year={2019} } 
+@misc{CausalRL2019EliasB,   title = {Causal Reinforcement Learning},   author={Bareinboim, Elias},   howpublished = {\url{https://crl.causalai.net/}},   year={2020} } 
 @misc{ mazumder2019guided, title={Guided Exploration in Deep Reinforcement Learning}, author={Sahisnu Mazumder and Bing Liu and Shuai Wang and Yingxuan Zhu and Xiaotian Yin and Lifeng Liu and Jian Li and Yongbing Huang}, year={2019}, url={https://openreview.net/forum?id=SJMeTo09YQ}, } 
-@article{Dietterich:2000:HRL:1622262.1622268,  author = {Dietterich, Thomas G.},  title = {Hierarchical Reinforcement Learning with the MAXQ Value Function Decomposition},  journal = {J. Artif. Int. Res.},  issue_date = {August 2000},  volume = {13},  number = {1},  month = nov,  year = {2000},  issn = {1076-9757},  pages = {227--303},  numpages = {77},  url = {http://dl.acm.org/citation.cfm?id=1622262.1622268},  acmid = {1622268},  publisher = {AI Access Foundation},  address = {USA}, }  
+
+
+
+@article{Dietterich:2000:HRL:1622262.1622268,
+author = {Dietterich, Thomas G.},
+title = {Hierarchical Reinforcement Learning with the MAXQ Value Function Decomposition},
+year = {2000},
+issue_date = {August 2000},
+publisher = {AI Access Foundation},
+address = {El Segundo, CA, USA},
+volume = {13},
+number = {1},
+issn = {1076-9757},
+journal = {J. Artif. Int. Res.},
+month = nov,
+pages = {227–303},
+numpages = {77}
+}
+
+
 @misc{plappert2018multigoal,     title={Multi-Goal Reinforcement Learning: Challenging Robotics Environments and Request for Research},     author={Matthias Plappert and Marcin Andrychowicz and Alex Ray and Bob McGrew and Bowen Baker and Glenn Powell and Jonas Schneider and Josh Tobin and Maciek Chociej and Peter Welinder and Vikash Kumar and Wojciech Zaremba},     year={2018},     eprint={1802.09464},     archivePrefix={arXiv},     primaryClass={cs.LG} } 
 @article{playingagainstnature2018,   author    = {Mauricio Gonzalez{-}Soto and                Luis Enrique Sucar and                Hugo Jair Escalante},   title     = {Playing against Nature: causal discovery for decision making under                uncertainty},   journal   = {CoRR},   volume    = {abs/1807.01268},   year      = {2018},   url       = {http://arxiv.org/abs/1807.01268},   archivePrefix = {arXiv},   eprint    = {1807.01268},   timestamp = {Wed, 31 Jul 2019 16:21:20 +0200},   biburl    = {https://dblp.org/rec/journals/corr/abs-1807-01268.bib},   bibsource = {dblp computer science bibliography, https://dblp.org} } 
-@article{surveyDRL2017,   author    = {Kai Arulkumaran and                Marc Peter Deisenroth and                Miles Brundage and                Anil Anthony Bharath},   title     = {A Brief Survey of Deep Reinforcement Learning},   journal   = {CoRR},   volume    = {abs/1708.05866},   year      = {2017},   url       = {http://arxiv.org/abs/1708.05866},   archivePrefix = {arXiv},   eprint    = {1708.05866},   timestamp = {Mon, 13 Aug 2018 16:46:01 +0200},   biburl    = {https://dblp.org/rec/journals/corr/abs-1708-05866.bib},   bibsource = {dblp computer science bibliography, https://dblp.org} } 
+
+
+@article{surveyDRL2017,
+  title={A brief survey of deep reinforcement learning},
+  author={Arulkumaran, Kai and Deisenroth, Marc Peter and Brundage, Miles and Bharath, Anil Anthony},
+  journal={arXiv preprint arXiv:1708.05866},
+  year={2017}
+}
+
+
+
 @article{theoryofcausalities2006,  ISSN = {0022362X},  URL = {http://www.jstor.org/stable/3655542},  author = {Nancy Cartwright},  journal = {The Journal of Philosophy},  number = {2},  pages = {55--66},  publisher = {Journal of Philosophy, Inc.},  title = {Where Is the Theory in Our "Theories" of Causality?},  volume = {103},  year = {2006} } 
 @incollection{lamport2019time,   title={Time, clocks, and the ordering of events in a distributed system},   author={Lamport, Leslie}, booktitle={Concurrency: the Works of Leslie Lamport},   publisher = {Association for Computing Machinery},
 pages={179--196},   year={2019} } 
@@ -55,12 +84,39 @@ pages={179--196},   year={2019} }
 @article {Silver1140, 	author = {Silver, David and Hubert, Thomas and Schrittwieser, Julian and Antonoglou, Ioannis and Lai, Matthew and Guez, Arthur and Lanctot, Marc and Sifre, Laurent and Kumaran, Dharshan and Graepel, Thore and Lillicrap, Timothy and Simonyan, Karen and Hassabis, Demis}, 	title = {A general reinforcement learning algorithm that masters chess, shogi, and Go through self-play}, 	volume = {362}, 	number = {6419}, 	pages = {1140--1144}, 	year = {2018}, 	doi = {10.1126/science.aar6404}, 	publisher = {American Association for the Advancement of Science}, 	issn = {0036-8075}, 	URL = {https://science.sciencemag.org/content/362/6419/1140}, 	eprint = {https://science.sciencemag.org/content/362/6419/1140.full.pdf}, 	journal = {Science} } 
 @article{botvinick2019reinforcement,   title={Reinforcement learning, fast and slow},   author={Botvinick, Mathew and Ritter, Sam and Wang, Jane X and Kurth-Nelson, Zeb and Blundell, Charles and Hassabis, Demis},   journal={Trends in cognitive sciences},   year={2019},   publisher={Elsevier} } 
 @misc{schlkopf2019causality,     title={Causality for Machine Learning},     author={Bernhard Schölkopf},     year={2019},     eprint={1911.10500},     archivePrefix={arXiv},     primaryClass={cs.LG} } 
-@book{woodward2005making,   title={Making things happen: A theory of causal explanation},   author={Woodward, James},   year={2005},   publisher={Oxford university press} } 
-@misc{chalupka2014visual,     title={Visual Causal Feature Learning},     author={Krzysztof Chalupka and Pietro Perona and Frederick Eberhardt},     year={2014},     eprint={1412.2309},     archivePrefix={arXiv},     primaryClass={stat.ML} } 
+@book{woodward2005making,   title={Making things happen: A theory of causal explanation},   author={Woodward, James},   year={2005},   publisher={Oxford university press} }
+
+
+@inproceedings{chalupka2014visual,
+author = {Chalupka, Krzysztof and Perona, Pietro and Eberhardt, Frederick},
+title = {Visual Causal Feature Learning},
+year = {2015},
+isbn = {9780996643108},
+publisher = {AUAI Press},
+address = {Arlington, Virginia, USA},
+abstract = {We provide a rigorous definition of the visual cause of a behavior that is broadly applicable to the visually driven behavior in humans, animals, neurons, robots and other perceiving systems. Our framework generalizes standard accounts of causal learning to settings in which the causal variables need to be constructed from micro-variables. We prove the Causal Coarsening Theorem, which allows us to gain causal knowledge from observational data with minimal experimental effort. The theorem provides a connection to standard inference techniques in machine learning that identify features of an image that correlate with, but may not cause, the target behavior. Finally, we propose an active learning scheme to learn a manipulator function that performs optimal manipulations on the image to automatically identify the visual cause of a target behavior. We illustrate our inference and learning algorithms in experiments based on both synthetic and real data.},
+booktitle = {Proceedings of the Thirty-First Conference on Uncertainty in Artificial Intelligence},
+pages = {181–190},
+numpages = {10},
+location = {Amsterdam, Netherlands},
+series = {UAI'15}
+}
+
+
 @misc{causal_q_2019, title={Causal Based Q-Learning }, journal={MICAI Causal Reasoning Workshop}, author={Méndez-Molina, Arquímides and Feliciano-Avelino, Ivan}, year={2019}} 
 @InCollection{sep-causation-mani, 	author       =	{Woodward, James}, 	title        =	{Causation and Manipulability}, 	booktitle    =	{The Stanford Encyclopedia of Philosophy}, 	editor       =	{Edward N. Zalta}, 	howpublished =	{\url{https://plato.stanford.edu/archives/win2016/entries/causation-mani/}}, 	year         =	{2016}, 	edition      =	{Winter 2016}, 	publisher    =	{Metaphysics Research Lab, Stanford University} } 
 @book{spirtes2000causation,   title={Causation, prediction, and search},   author={Spirtes, Peter and Glymour, Clark N and Scheines, Richard and Heckerman, David},   year={2000},   publisher={MIT press} } 
-@misc{gonzalezsoto2019reinforcement,     title={Reinforcement Learning is not a Causal problem},     author={Mauricio Gonzalez-Soto and Felipe Orihuela Espina},     year={2019},     eprint={1908.07617},     archivePrefix={arXiv},     primaryClass={cs.AI} } 
+
+
+
+@article{gonzalezsoto2019reinforcement,
+  title={Reinforcement Learning is not a Causal problem},
+  author={M. Gonzalez-Soto and F. Orihuela-Espina},
+  journal={ArXiv},
+  year={2019},
+  volume={abs/1908.07617}
+}
+
 @article{bellman1966dynamic,   title={Dynamic programming},   author={Bellman, Richard},   journal={Science},   volume={153},   number={3731},   pages={34--37},   year={1966},   publisher={American Association for the Advancement of Science} } 
 @misc{bengio2019metatransfer,     title={A Meta-Transfer Objective for Learning to Disentangle Causal Mechanisms},     author={Yoshua Bengio and Tristan Deleu and Nasim Rahaman and Rosemary Ke and Sébastien Lachapelle and Olexa Bilaniuk and Anirudh Goyal and Christopher Pal},     year={2019},     eprint={1901.10912},     archivePrefix={arXiv},     primaryClass={cs.LG} } 
 @InCollection{sep-causation-probabilistic, 	author       =	{Hitchcock, Christopher}, 	title        =	{Probabilistic Causation}, 	booktitle    =	{The Stanford Encyclopedia of Philosophy}, 	editor       =	{Edward N. Zalta}, 	howpublished =	{\url{https://plato.stanford.edu/archives/fall2018/entries/causation-probabilistic/}}, 	year         =	{2018}, 	edition      =	{Fall 2018}, 	publisher    =	{Metaphysics Research Lab, Stanford University} } 
@@ -189,13 +245,15 @@ pages={179--196},   year={2019} }
     primaryClass={cs.LG}
 }
 
+
 @inproceedings{Abel2015GoalBasedAP,
-  title={Goal-Based Action Priors},
-  author={David Abel and D. Hershkowitz and Gabriel Barth-Maron and Stephen Brawner and K. O'Farrell and J. MacGlashan and Stefanie Tellex},
-  booktitle={ICAPS},
+  title={Goal-based action priors},
+  author={Abel, David and Hershkowitz, David and Barth-Maron, Gabriel and Brawner, Stephen and O'Farrell, Kevin and MacGlashan, James and Tellex, Stefanie},
+  booktitle={Proceedings of the International Conference on Automated Planning and Scheduling},
+  volume={25},
+  number={1},
   year={2015}
 }
-
 
 
 @misc{kathpalia2019measuring,
@@ -223,4 +281,39 @@ pages={179--196},   year={2019} }
       eprint={2010.06164},
       archivePrefix={arXiv},
       primaryClass={cs.AI}
+}
+
+@InCollection{sep-decision-theory,
+	author       =	{Steele, Katie and Stefánsson, H. Orri},
+	title        =	{{Decision Theory}},
+	booktitle    =	{The {Stanford} Encyclopedia of Philosophy},
+	editor       =	{Edward N. Zalta},
+	howpublished =	{\url{https://plato.stanford.edu/archives/win2020/entries/decision-theory/}},
+	year         =	{2020},
+	edition      =	{Winter 2020},
+	publisher    =	{Metaphysics Research Lab, Stanford University}
+}
+
+@INPROCEEDINGS{Geibel01reinforcementlearning,
+    author = {Peter Geibel},
+    title = {Reinforcement Learning with Bounded Risk},
+    booktitle = {In Proceedings of the Eighteenth International Conference on Machine Learning},
+    year = {2001},
+    pages = {162--169},
+    publisher = {Morgan Kaufmann}
+}
+
+@book{cohen2013statistical,
+  title={Statistical power analysis for the behavioral sciences},
+  author={Cohen, Jacob},
+  year={2013},
+  publisher={Academic press}
+}
+
+
+@inproceedings{seabold2010statsmodels,
+  title={statsmodels: Econometric and statistical modeling with python},
+  author={Seabold, Skipper y Perktold, Josef},
+  booktitle={9th Python in Science Conference},
+  year={2010},
 }
