--- a/thesis.tex
+++ b/thesis.tex
@@ -123,10 +123,10 @@
 
 \include{Chapter1/introduction}
 \include{Chapter2/background}
-% \include{Chapter3/related_work}
-% \include{Chapter4/method}
-% \include{Chapter5/results}
-% \include{Chapter6/conclusions}
+\include{Chapter3/related_work}
+\include{Chapter4/method}
+\include{Chapter5/results}
+\include{Chapter6/conclusions}
 %\include{Chapter7/chapter7}
 
 
@@ -143,7 +143,7 @@
 % Reference styles: http://sites.stat.psu.edu/~surajit/present/bib.htm
 
 % \bibliographystyle{apalike}
-\bibliographystyle{plainnat} % Use for unsorted references  
+% \bibliographystyle{plainnat} % Use for unsorted references  
 %\bibliographystyle{plainnat} % use this to have URLs listed in References
 % \cleardoublepage
 \bibliography{References/references} % Path to your References.bib file
